--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -1,17 +1,20 @@
-﻿@using System.Security.Principal
-
-<ul class="navbar-nav">
-@if (User.Identity?.IsAuthenticated == true)
-{
-        <span class="navbar-text text-dark">Hello @User.Identity?.Name!</span>
+﻿<ul class="navbar-nav">
+    @if (User.Identity?.IsAuthenticated == true)
+    {
+        <!-- Afișează numele utilizatorului autentificat -->
+        <span class="navbar-text text-dark">Hello, @User.Identity?.Name!</span>
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="MicrosoftIdentity" asp-controller="Account" asp-action="SignOut">Sign out</a>
+            <a class="nav-link text-dark" asp-controller="Auth" asp-action="Logout">Logout</a>
         </li>
-}
-else
-{
+    }
+    else
+    {
+        <!-- Afișează opțiunile Login și Register pentru utilizatorii neautentificați -->
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="MicrosoftIdentity" asp-controller="Account" asp-action="SignIn">Sign in</a>
+            <a class="nav-link text-dark" asp-controller="Auth" asp-action="Login">Login</a>
         </li>
-}
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-controller="Auth" asp-action="Register">Register</a>
+        </li>
+    }
 </ul>
