--- a/Views/Plans/Index.cshtml
+++ b/Views/Plans/Index.cshtml
@@ -2,13 +2,18 @@
 
 @{
     ViewData["Title"] = "Index";
+    var userRoles = User.Claims.Where(c => c.Type == System.Security.Claims.ClaimTypes.Role).Select(c => c.Value).ToList();
 }
 
 <h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+@if (userRoles.Contains("Admin") || userRoles.Contains("Support"))
+{
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
+}
+
 <table class="table">
     <thead>
         <tr>
@@ -28,26 +33,30 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.PlanName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MaxTicketsPerMonth)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.PlanId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.PlanId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.PlanId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PlanName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Price)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.MaxTicketsPerMonth)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @if (userRoles.Contains("Admin") || userRoles.Contains("Support"))
+                    {
+                        <a asp-action="Edit" asp-route-id="@item.PlanId">Edit</a>  
+                        <a asp-action="Details" asp-route-id="@item.PlanId">Details</a> 
+                        <a asp-action="Delete" asp-route-id="@item.PlanId">Delete</a>
+                    }
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
