--- a/Views/Plans/Details.cshtml
+++ b/Views/Plans/Details.cshtml
@@ -1,42 +1,36 @@
 ﻿@model TicketingSystem.Models.Plan
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Plan Details";
 }
 
-<h1>Details</h1>
+<div class="container mt-4">
+    <h1 class="mb-4 text-primary">Plan Details</h1>
 
-<div>
-    <h4>Plan</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PlanName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PlanName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.MaxTicketsPerMonth)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MaxTicketsPerMonth)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.PlanId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <div class="card shadow-sm mb-4">
+        <div class="card-body">
+            <dl class="row">
+                <dt class="col-sm-4 fw-bold">Plan Name</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.PlanName)</dd>
+
+                <dt class="col-sm-4 fw-bold">Price</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.Price)</dd>
+
+                <dt class="col-sm-4 fw-bold">Max Tickets Per Month</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.MaxTicketsPerMonth)</dd>
+
+                <dt class="col-sm-4 fw-bold">Description</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.Description)</dd>
+            </dl>
+        </div>
+    </div>
+
+    <div class="d-flex justify-content-between">
+        <a asp-action="Edit" asp-route-id="@Model?.PlanId" class="btn btn-warning">
+            <i class="bi bi-pencil-square"></i> Edit
+        </a>
+        <a asp-action="Index" class="btn btn-secondary">
+            <i class="bi bi-arrow-left-circle"></i> Back to List
+        </a>
+    </div>
 </div>
