--- a/Views/TicketStatus/Delete.cshtml
+++ b/Views/TicketStatus/Delete.cshtml
@@ -1,27 +1,31 @@
 ﻿@model TicketingSystem.Models.TicketStatus
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Ticket Status";
 }
 
-<h1>Delete</h1>
+<div class="container mt-4">
+    <h1 class="mb-4 text-danger">Delete Ticket Status</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>TicketStatus</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.StatusName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.StatusName)
-        </dd>
-    </dl>
-    
+    <div class="card shadow-sm">
+        <div class="card-body">
+            <h5 class="card-title text-danger">Are you sure you want to delete this?</h5>
+            <dl class="row">
+                <dt class="col-sm-4">Status Name</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.StatusName)</dd>
+            </dl>
+        </div>
+    </div>
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="StatusId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <div class="d-flex justify-content-between mt-3">
+            <button type="submit" class="btn btn-danger">
+                <i class="bi bi-trash"></i> Delete
+            </button>
+            <a asp-action="Index" class="btn btn-secondary">
+                <i class="bi bi-arrow-left-circle"></i> Cancel
+            </a>
+        </div>
     </form>
 </div>
